<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">greenHub</string>
    <string name="facebook_app_id">1918082748427413</string>
    <string name="chromecast_app_id">E88EA128</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="currency">$</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="textsignup">By Signing up you agree to our \n Terms of Use and Private Policy.</string>
    <string name="main_title_librarynew">Library</string>
    <string name="main_title_library">Library</string>
    <string name="main_title_download">Downloads</string>
    <string name="main_title_hotspot">Hotspots</string>
    <string name="main_title_search">SEARCH</string>
    <string name="main_title_account">Account</string>
    <string name="library_downloading_detail">Downloading</string>
    <string name="library_download_detail">Download</string>
    <string name="library_download_ready">Play</string>
    <string name="library_download_error">Error</string>
    <string name="library_download_pause">Waiting</string>
    <string name="delete">Delete</string>
    <string name="call">CALL</string>
    <string name="map">MAP</string>
    <string name="course">COURSE</string>
    <string name="releasedate_library_detail">Release Date: </string>
    <string name="selectgenre">Select Genre</string>
    <string name="pending">Download is pending.</string>
    <string name="connectap">Connected to AP, Downloading ...</string>
    <string name="usingservice">Using hotspot service via 2G/3G/4G networks maybe result in additional data charges by your Mobile service provider. Would you like to continue?</string>
    <string name="queue">Queue</string>
    <string name="waittingdown">Waiting to download</string>
    <string name="notconnecthotspot">Please connect to a Aistream Hotspot</string>
    <string name="devicenotconnected">Your device is not yet connected to a video hotspot. Please refer to the Hotspot section to find a closest Hotspot location in order to continue downloading.{Code1212}</string>
    <string name="maximumqueue">You have exceeded maximum (20) download lists. Pls remove some files and try again.</string>
    <string name="expires">Expires on</string>
    <string name="waittingdecrypted">Waiting to decrypted</string>
    <string name="optimizingmovie">Optimizing the content for best quality. Please wait a moment...</string>
    <string name="allgen">All Genres</string>
    <string name="hello">Welcome to greenHub</string>
    <string name="wellcome">Welcome</string>
    <string name="welcomesignup">FREE ACCOUNT SIGN UP</string>
    <string name="signin">LOG IN</string>
    <string name="lestgo">LET\'S GO</string>
    <string name="smsotp">SEND OTP</string>
    <string name="getotp">Get OTP</string>
    <string name="notyetmember">Not yet a member - Sign Up now</string>
    <string name="newmovies">New Arrivals</string>
    <string name="hotmovies">Trending Now</string>
    <string name="freemovies">Free Movies</string>
    <string name="continuewatching">Continue Watching</string>
    <string name="all">All</string>
    <string name="accountbalance">Account Balance</string>
    <string name="accountrecharge">Top Up Account</string>
    <string name="available_download_credits">Free Movie Credits</string>
    <string name="purchasehistory">Purchase History</string>
    <string name="viewinghistory">Viewing History</string>
    <string name="favoritemovie">Favorite Movies</string>
    <string name="shareapp">Share App to friends</string>
    <string name="suggestion">Your Suggestions</string>
    <string name="planname">Subscription Plan</string>
    <string name="planprice">Plan Price</string>
    <string name="account_expire_time">Next Billing Date</string>
    <string name="seeall">See All ></string>
    <string name="favorite">Favorite</string>
    <string name="morelikethis">More Like This</string>
    <string name="viewdownload">downloads</string>
    <string name="profile">Profile Picture</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="redeem">Redeem Voucher Code</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="selection_default_none">Default (none)</string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="notfoundsdcard">SD-Card not found on your device.</string>
    <string name="statusdownload1">Downloading...</string>
    <string name="statusdownload2">On Download Queue...</string>
    <string name="statusdownload4">INTERUPTED-NO CONNECTION</string>
    <string name="statusdownload5">EXPIRY: %s</string>
    <string name="statusdownload6">RESIDUAL RETAL PERIOD: %s</string>
    <string name="rentalperiodendtime">EXPIRED: %s</string>
    <string name="purchargemoviedownload">Rxxx to Purchase this content</string>
    <string name="textdialognotmac">Please connect to a Aistream Wi-Fi Hotspot to process the download tasks.</string>
    <string name="playingdialognotmac">Please connect to a Aistream Wi-Fi Hotspot to play the content.</string>
    <string name="textchargemovie">Do you want to rent this content for $xxx per XXX Day(s)?</string>
    <string name="textchargevipmovie">Do you want to rent VIP plan for $xxx per Month?</string>
    <string name="error_loginfail">Invalid domestic mobile number.</string>
    <string name="error_loginfail1">Service is not available</string>
    <string name="nodatadownload">Movies that you download appear here.</string>
    <string name="rent">Rental Price: {0} $ per day</string>
    <string name="rents">Rental Price: {0} $ per {1} days</string>
    <string name="rent_price_day">${0}/1 Day</string>
    <string name="rent_price_days">${0}/{1} Days</string>
    <string name="rent_price_month">${0}/1 Month</string>
    <string name="plan_price">$%s/Month</string>
    <string name="switch_plan_desc">Switch VIP plan, you can download and watch all vip movies free of charge.</string>
    <string name="switch_plan_btn">VIP PLAN({0} $/Month)</string>
    <string name="diskspace">Available Disk Space</string>
    <string name="diskspaceinternal">Available Internal Storage</string>
    <string name="diskspacesd">Available Micro SD Storage</string>
    <string name="freerental">Rental Price: Free</string>
    <string name="rental_expires">FREE TO DOWNLOAD - EXPIRES BY {0}</string>
    <string name="error_6">Account insufficient funds</string>
    <string name="error_2">client not found</string>
    <string name="msgdelete">Do you want to delete these movies?</string>
    <string name="msgdeleteone">Do you want to delete the movie?</string>
    <string name="msgaddmovietolistdown">The selected content has been added to the Download Queue.</string>
    <string name="msgwhennotmac">Your download request is being processed in priority sequence. Thank you!</string>
    <string name="msg_vip_expired">Your subcription plan has expired, please fill your account balance to continue.</string>
    <string name="msg_recharge">You\'re trying to access a Premium content that required payment. Please fill your account balance to proceed.</string>
    <string name="msg_rechargevip">You\'re trying to access VIP contents that required payment. Please fill your account balance to proceed.</string>
    <string name="renew_vip_succ">Your account renew success.</string>
    <string name="rechargesuccess">sucessfully</string>
    <string name="cardnoprice">Card PIN is not valid.</string>
    <string name="nodatapurchase">No purchase history found.</string>
    <string name="nodatafavorite">No Favorite Movie.</string>
    <string name="comingsoon">Feature coming soon</string>
    <string name="hintlogin">Input your phone number</string>
    <string name="hintsignup">Input Mobile Number to Signup</string>
    <string name="invalidmobile">Invalid mobile number</string>
    <string name="loginfailerror7">Failed to verify One Time Password.</string>
    <string name="loginfailerror8">exceed max allowed OTPs per day</string>
    <string name="loginfailerror18">subscription plan not exist</string>
    <string name="loginfailerror400">incomplete request parameters</string>
    <string name="signupfailerror10">mobile is already registered</string>
    <string name="notnetwork">Network is not available</string>
    <string name="notmobile">Please Input Mobile Number</string>
    <string name="notpin">Please Input PIN</string>
    <string name="faildownloadrightdetail">Fail to get Download Right</string>
    <string name="faildownloadright">We are currently experiencing technical difficulty to Download Right with this content. Please try again later.</string>
    <string name="faildownloadm3u81">We are currently experiencing technical difficulty with this content. Please try again later.</string>
    <string name="faildownloadm3u8">Fail to Download File M3U8</string>
    <string name="failbillingstart200">Fail to send billing start request</string>
    <string name="devicename">Device Name</string>
    <string name="deviceid">Device ID</string>
    <string name="osversion">Android Version</string>
    <string name="lanip">LAN IP</string>
    <string name="wanip">WAN IP</string>
    <string name="qrouter">Wi-Fi SSID Name</string>
    <string name="wifi_type">Wi-Fi Frequency</string>
    <string name="wifi_strength">Wifi Signal Strength</string>
    <string name="epg">Access Server</string>
    <string name="streamer">Streamer</string>
    <string name="palyerID">Player ID</string>
    <string name="appname">App Name</string>
    <string name="appversion">App Version</string>
    <string name="rootstatus">Root Status</string>
    <string name="resetapp">Reset App</string>
    <string name="supportinfo">Technical Support</string>
    <string name="titlelogout">Do you want to logout of greenHub?</string>
    <string name="titlelogout1">Switch to a different account resulting in deletion of all downloaded contents on this device. Do you want to continue? </string>
    <string name="titleexitapp">Do you want to exit greenHub?</string>
    <string name="notavailable">Comming soon.</string>
    <string name="confirmreset">Reset app will delete all data including downloaded contents. Do you want to continue?</string>
    <string name="downloading">DOWNLOADING...</string>
    <string name="downloading_speed">Downloading %s</string>
    <string name="waitingconnection">WAITING FOR CONNECTION.</string>
    <string name="signup">SIGN UP</string>
    <string name="textsendotp">We will send you an OTP (One-Time PIN) to validate your phone number.</string>
    <string name="textprivacypolicy">By signing in you agree with our</string>
    <string name="textprivacypolicy1">Term of Service </string>
    <string name="textprivacypolicy2">and</string>
    <string name="textprivacypolicy3"> Privacy Policy</string>
    <string name="delete_notice">Select Items to Remove</string>
</resources>